added search fetures and part of styles

--- a/src/template.html
+++ b/src/template.html
@@ -9,6 +9,10 @@
   </head>
 
   <body>
-    <div id="root"></div>
+    <form class="query">
+      <input class="query_text" type="text" name="query" />
+      <button class="query_submit" type="submit">Search Yum Yum</button>
+    </form>
+    <ul class="projects"></ul>
   </body>
 </html>
